Enhance workspace permissions and implement OWL-based semantic clause reasoning support:
- Added granular workspace permissions with support for owner-based and role-based access control.
- Integrated OWL-based semantic clause reasoning for better expression validation.
- Introduced `OWLSemanticClauseSupport` and extended `SemanticSearchSession` and reasoner services to use clause bounds and restrictions.
- Updated workspace and project settings management with selective metadata and privilege updates.
- Refactored resolution logic to accommodate predicate operands and enforce clause specialization.
- Add detailed tests for workspace operations, semantic expression parsing, and validation.